# AutoServiceTelegramBot

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
apps/garage-telegram/: Cargo.toml
apps/garage-telegram/src/: bot.rs  config.rs  container.rs  main.rs
apps/garage-telegram/src/handlers/: bookings.rs  cars.rs  clients.rs  errors.rs  mod.rs  parts.rs  repairs.rs  start.rs
apps/garage-telegram/src/keyboards/: bookings.rs  cars.rs  clients.rs  main.rs  mod.rs  parts.rs  repairs.rs  reply.rs
apps/garage-telegram/src/messages/: bookings.rs  cars.rs  clients.rs  errors.rs  format.rs  main.rs  mod.rs  parts.rs  repairs.rs
apps/garage-telegram/src/routing/: access.rs  callbacks.rs  mod.rs  text.rs
apps/garage-telegram/src/state/: dialog_state.rs  drafts.rs  mod.rs  session.rs
apps/garage-telegram/src/ui/: cleanup.rs  mod.rs  money_input.rs  render.rs  reply_preset.rs
crates/garage-infra/: Cargo.toml
crates/garage-infra/migrations/: 202605100001_add_car_registration_document_photo_ref.sql  202605120001_create_clients.sql  202605120002_create_cars.sql  202605120003_create_bookings.sql  202605120004_create_parts.sql  202605120005_create_part_supplies.sql  202605120006_create_repairs.sql  202605120007_create_repair_parts.sql  202605120008_create_payments.sql  202605120009_create_stock_movements.sql
crates/garage-infra/src/: error.rs  lib.rs
crates/garage-infra/src/db/: pool.rs
crates/garage-infra/src/mappers/: booking.rs  car.rs  client.rs  mod.rs  part.rs  part_supply.rs  payment.rs  repair.rs  repair_part.rs  stock_movement.rs
crates/garage-infra/tests/: booking_repository.rs  car_repository.rs  client_repository.rs  part_repository.rs  part_supply_repository.rs  payment_repository.rs  payment_unit_of_work.rs  repair_part_repository.rs  repair_part_unit_of_work.rs  repair_repository.rs  stock_movement_repository.rs
docs/: DOCKER.md  (+1 more)
(+75 files in other folders)
