[package]
name = "garage-telegram"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
garage-domain.workspace = true
garage-app.workspace = true
garage-infra.workspace = true

tokio.workspace = true
sqlx.workspace = true
teloxide.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
